--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,10 @@
     "baseUrl": ".",
     "sourceMap": true,
     "module": "commonjs",
-    "target": "es2015"
+    "target": "es2015",
+    "moduleResolution": "node"
   },
   "include": [
-    "src/swagger-generated.json",
     "src/**/*"
   ],
   "exclude": [
