--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.1",
   "scripts": {
     "build": "tsc",
-    "start": "node .",
-    "start:dev": "nodemon"
+    "start": "node --env-file=.env .",
+    "start:dev": "nodemon --env-file=.env",
+    "test": "npm run build && mocha ./tests/*.test.js",
+    "migrate": "npx prisma migrate dev",
+    "seed": "ts-node prisma/seed.ts"
   },
   "nodemonConfig": {
     "watch": [
@@ -20,6 +23,7 @@
     "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "should": "^13.2.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-dist": "^5.21.0",
     "swagger-ui-express": "^5.0.1"
@@ -28,8 +32,10 @@
     "@types/node": "^22.14.1",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "mocha": "^11.1.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.6.0",
+    "supertest": "^7.1.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
