--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://postgres:u20220A@localhost:5444/test_task?schema=public"
+DATABASE_URL="postgresql://postgres:prisma@postgres_db:5432/postgres?schema=public"
 SECRET='testTackSecret'
