--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start:dev": "nodemon --env-file=.env",
     "test": "npm run build && mocha ./tests/*.test.js",
     "migrate": "npx prisma migrate dev",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "db:deploy": "npx prisma migrate deploy && npx prisma generate"
   },
   "nodemonConfig": {
     "watch": [
