--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start:dev": "nodemon --env-file=.env",
     "test": "npm run build && mocha ./tests/*.test.js",
     "migrate": "npx prisma migrate dev",
+    "generate": "npx prisma generate",
     "seed": "ts-node prisma/seed.ts",
     "db:deploy": "npx prisma migrate deploy && npx prisma generate"
   },
